# G1-ROS2-MoveIt

./: .gitignore  README.md
scripts/: fix_collisions.py  force_fix.py  generate_limits.py  generate_moveit_config.py  make_stick_figure.py
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/urdf/: g1.urdf  g1_merged.xacro
src/g1_moveit_config/: CMakeLists.txt  package.xml
src/g1_moveit_config/config/: g1.srdf  g1.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
src/g1_moveit_config/launch/: demo.launch.py
